:white_check_mark: Update test ig

--- a/test/ig-site/ig.ini
+++ b/test/ig-site/ig.ini
@@ -1,13 +1,13 @@
 [IG]
-ig = input/myig.xml
-template = hl7.fhir.template
+ig = input/ImplementationGuide-kidsfirst.json
+template = fhir.base.template
 usage-stats-opt-out = false
 copyrightyear = 2019+
 license = CC0-1.0
-version = 4.0.1
-ballotstatus = CI Build
+version = 0.1.0
+ballotstatus = STU1
 fhirspec = http://build.fhir.org/
-#excludexml = Yes
-#excludejson = Yes
-#excludettl = Yes
-#excludeMaps = Yes
+excludexml = No
+excludejson = No
+excludettl = No
+excludeMaps = No
